# paper_trading_backend

./: Cargo.toml  README.md
other/: tech.md
src/: errors.rs  lib.rs  main.rs  worker.rs
src/auth/: mod.rs
src/config/: app_config.rs  database.rs  mod.rs
src/db/migrations/: closed_positions.cql  leaderboard.cql  limit_orders.cql  portfolio_performance.cql  positions.cql  trades.cql  users.cql
src/db/queries/: closed_positions_db.rs  leaderboard.rs  leaderboard_db.rs  limit_orders_db.rs  mod.rs  portfolio_performance.rs  portfolio_performance_db.rs  positions.rs  positions_db.rs  trade.rs  trade_db.rs  users.rs  users_db.rs
src/middleware/: mod.rs
src/models/: closed_position.rs  leaderboard.rs  limit_order.rs  mod.rs  portfolio_performance.rs  positions.rs  trade.rs  user.rs
src/routes/: auth.rs  closed_positions.rs  leaderboard.rs  mod.rs  orders.rs  portfolio.rs  portfolio_performance.rs  prices.rs  trade.rs  user.rs
src/services/: leaderboard.rs  limit_order_service.rs  market_data_service.rs  mod.rs  portfolio.rs  portfolio_performance.rs  portfolio_performance_service.rs  portfolio_service.rs  trade.rs  trade_service.rs  user.rs
src/state/: app_state.rs
tests/: load_test.rs  load_test_results.md
