[package]
name = "paper-trading-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
env_logger = "0.11.9"
scylla = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
