[package]
name = "paper-trading-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4"
scylla = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
thiserror = "1"
jsonwebtoken = "9"
